# MOTOR-alpha

./: .gitignore  .gitmodules  CMakeLists.txt  Global Z-grid plotting.md  README.md  clean.sh  compileDocs.sh  compileExt.sh  developNote.md  pathEnv.sh  setEnv.uni.sh  updateFortranFormat.sh
etc/bkCode/LBFGSB/: CMakeLists.txt  makefile
src/Application/: App_3DAnalysis.F90  App_4DVAR.F90  App_CMA_GD.F90  App_CMA_GD_EnLoc.F90  App_CMA_GD_EnLoc_BEC.F90  App_CMA_GD_EnLoc_Modelvar.F90  App_CMA_GD_HybInc.F90  App_CMA_GD_Opr.F90  App_CalculateBEC_EnLoc.F90  App_Get_BcgAtObs.F90  App_SurfaceAnalysis.F90  Applications.F90  Applications_HybInc.F90  CMakeLists.txt  Driver_App_4DVAR.F90  analytic_sfc.F90  srcFiles.txt
src/Application/ConventionalAnalysis/: CMakeLists.txt  plotAnalytic.F90  srcFiles.txt  surfaceAnalysis.F90
src/MOTOR-DA/C2M/: C2MBase.F90  CMakeLists.txt  CMakeLists_bck.txt  README_C2M.md  ShallowWaterAdjointModel.F90  c4DVar.F90  cDefault.F90  cShallowWater4DVar.F90  cShallowWater4DVar_bck.F90  cVortDive.F90  cVortDiveFields.F90  cVortDive_bck.F90  plot_shallowwater_cv.py  srcFiles.txt
src/MOTOR-DA/ObsMG/: CMakeLists.txt  ObsMG.F90  ObsSetArray.F90  README.md  srcFiles.txt
src/MOTOR-DA/PostProc/: CMakeLists.txt  Export2HASCoordInSelDomain.F90  Export2SelDomain.F90  PostProcTools.F90
src/MOTOR-DP/ObsSatellite/: BcPredictors.F90  CMakeLists.txt  DP_utils.F90  Process_agri.F90  Process_giirs.F90  Process_hiras.F90  Process_mwhs.F90  Process_mwts.F90  RadBase.F90  RawAGRI.F90  RawGIIRS.F90  RawHIRAS.F90  RawMWHS.F90  RawMWTS.F90  RawSatellite_BC.F90  ReadWriteAGRI.F90  ReadWriteGIIRS.F90  ReadWriteHIRAS.F90  ReadWriteMWHS.F90  ReadWriteMWTS.F90  Read_HDF5_interfaces.F90  SatelliteDecom.F90  srcFiles.txt
src/MOTOR-PS/DyCores/: CMakeLists.txt  dyCoreGZM.F90  dyCoresBase.F90  srcFiles.txt
src/MOTOR-PS/Dyn/: CMakeLists.txt  CalPres.F90  PreCal.F90  TenDiv.F90  nwp.F90  srcFiles.txt  srcFiles_Cartesian.txt
src/MOTOR-PS/PoissonSolver_Kp/: AdotX4PsiChi.F90  CMakeLists.txt  GMRES_gzm.F90  HarmonicLifting.F90  PSMatrix.F90  PSSolutn.F90  PlotAState.F90  PoissonSolver.F90  Relaxations.F90  addLinearSolutions.F90  checkPsiChi2UV.F90  jacobi_test.f90  mixedPsiChiSolver_Dirichlet.F90  mixedPsiChi_Solver.F90  namelist_ps.f90  psiChi2velocity.F90  srcFiles.txt
src/MOTOR-PS/PreSys/: CMakeLists.txt  CalVerDer.F90  GenBdy.F90  GenContainers.F90  GenDerivativeCoef.F90  GenInterpCoef.F90  InterpValue.F90  srcFiles.txt
src/MOTOR-PS/TimeIntegration/: CMakeLists.txt  Lists.txt  TimeIntegral.F90  TimeIntegrationAB3.F90  TimeIntegrationAB3Adjoint.F90  TimeIntegrationAdjointBase.F90  TimeIntegrationBase.F90  TimeIntegrationBaseAdjoint.F90  TimeIntegrationRK4.F90  TimeIntegrationRK4Adjoint.F90  rk4 copy.F90  rk4.F90  srcFiles.txt
src/MOTOR-PS/ZGrid/: CMakeLists.txt  gzm.F90  gzm_Chen.F90  gzm_Xie.F90  gzm_chen_new.F90  gzm_chen_with_ratio_change_with_height.F90  gzm_terrain.F90  srcFiles.txt
src/MOTOR-PS/gzm_upd/: CMakeLists.txt  CalVerDer_TL.F90  CalVerDer_adj.F90  Compute_Gradient_Objective_Function.F90  GenSgDiffCoef_TL_AD.F90  Matrix_Utils.F90  Objective_Function.F90  Verification copy.F90  Verification.F90  Verification_complex.F90  Verify_GZM_Verification.F90  gzm_adj.F90  gzm_tlm.F90  namelist_ps_adj.F90  poissonSolverAdjoint.F90  psMatrix_adj.F90  psSolutn_adj.F90  srcFiles.txt  verify_adj_calverder_firstorder.F90  verify_adj_calverder_firstorder_half.F90  verify_adj_calverder_generic.F90  verify_adj_calverder_secondorder.F90  verify_adj_precals.F90  verify_divergen_adjoint.F90  verify_grad_lat_adjoint.F90  verify_grad_lon_adjoint.F90  verify_jacobian_adjoint.F90  verify_laplacia_adjoint.F90
src/MOTOR-QC/ObsBase/: CMakeLists.txt  ObsBase.F90  ObsBase2.F90  ObsConvention2.F90  ObsRaw.F90  SatelliteWavelet.F90  Wavelet.F90  obsCommon.F90  obsTools.F90  srcFiles.txt
src/MOTOR-QC/ObsConvention/: CMakeLists.txt  ObsGWST.F90  ObsLBUOY.F90  ObsSING.F90  ObsSound.F90  ObsSound.bk.F90  ObsSurface.F90  ObsSurface.bk.F90  ObsVwpw.F90  ObsVwpw.bk.F90  srcFiles.txt
src/MOTOR-QC/ObsRadar/: CMakeLists.txt  ObsRadarRef.F90  ObsRadarVel.F90  ObsRadarVelEach.F90  RadarRAW.F90  RadarRAW_tilt.F90  radar_to_latlon.f  razm_lat_lon_gm.f  srcFiles.txt
src/MOTOR-QC/ObsSatellite/: CMakeLists.txt  EachChannel.F90  Interp_utils.F90  ObsSatellite.F90  SatelliteRecon.F90  Satellite_QC_utils.F90  srcFiles.txt  thinning_utils.F90
src/MOTOR-QC/ObsSatob/: CMakeLists.txt  Interp.F90  ModuleInterpolation.F90  ObsSatob.F90  Satob.F90  extreme_value.F90  meteoro_constants.F90  meteoro_type_define.F90  module_GtsQC.F90  qc_flag_set.F90  srcFiles.txt  testSatob.nl
src/MOTOR-QC/ObsUtilities/: CMakeLists.txt  FastMCDDetector.F90  ObsConcat.F90  ObsOutlierDetector.F90  netCDFReader.F90  netCDFTable.F90  srcFiles.txt
src/MOTOR-Repository/AuxType/: AuxTypeMG.F90  AuxTypeObs.F90  AuxTypeSG.F90  CMakeLists.txt  srcFiles.txt
src/MOTOR-Repository/Geometry/: CMakeLists.txt  Filter.F90  Geometry.F90  ImmersedBoundary.F90  MPDDInfo_sg.F90  MultiGrid.F90  SingleGrid.F90  domainCheck.F90  namelist_gm.F90  srcFiles.txt
src/MOTOR-Repository/LinearSolvers/: CMakeLists.txt  PoissonDirichlet.F90  linearSolversBase.F90  srcFiles.txt
src/MOTOR-Repository/MPDD/: CMakeLists.txt  MPDDBase.F90  MPDDGlob.F90  MPDDSub.F90  SeedGen.F90  srcFiles.txt
src/MOTOR-Repository/MPObs/: CMakeLists.txt  MPObs.F90  srcFiles.txt
src/UnitTests/: CMakeLists.txt  README.md  TestMixedSolver.F90  TestShallowWater.F90  Test_Poisson.F90  test_petsc.f90
src/UnitTests/Application/: CMakeLists.txt  Test_ImmersedBoundary.F90  UnitTest_Convention.F90  UnitTest_Convention_Adv.F90  UnitTest_Convention_MultiObs.F90  UnitTest_Convention_MultiObsVcycle.F90  UnitTest_Conventions.F90  UnitTest_sfc_randoms.F90
src/UnitTests/MOTOR-DA/: CMakeLists.txt  ShallowWaterModelTest.F90  Tendency_test.F90  TestAdjointDotProduct.F90  Test_BField_Laplace_Terrain.F90  Test_BKErr_model_FWD_ADJ_Binv.F90  Test_BMatTLAD.F90  Test_BMatrix.F90  Test_C2O.F90  Test_Cum.F90  Test_CumJfun.F90  Test_Cum_AD.F90  Test_Cum_interface.F90  Test_EnLoc_ADcheck.F90  Test_IOECM.F90  (+35 more)
(+713 files in other folders)
